Prepare release 4.5.0 (#1127)